Added data plots and other features to StockPredictor.py. Doesn't work well though

--- a/.gitignore
+++ b/.gitignore
@@ -6,34 +6,21 @@ RailroadTrainMonitor/TrainingImagesNegative
 RailroadTrainMonitor/TrainingImagesNegativeUnannotated
 RailroadTrainMonitor/__pycache__
 RailroadTrainMonitor/Backups
-RailroadTrainMonitor/TrainingAnnotations.csv
-RailroadTrainMonitor/TrainingAnnotationsNegative.csv
-RailroadTrainMonitor/TrainingAnnotationsCurated.csv
-RailroadTrainMonitor/TrainedModel.pth
+RailroadTrainMonitor/*.pth
 RailroadTrainMonitor/.idea
-RailroadTrainMonitor/ImageListTraining.txt
-RailroadTrainMonitor/ImageListTesting.txt
-RailroadTrainMonitor/ImageListTrainingNegative.txt
-RailroadTrainMonitor/TestingAnnotations.csv
-RailroadTrainMonitor/TrainData.csv
+RailroadTrainMonitor/*.txt
+RailroadTrainMonitor/*.csv
 RailroadTrainMonitor/TrainingScreenshots
 RailroadTrainMonitor/TrainingScreenshotsNegative
 RailroadTrainMonitor/config.ini
 RailroadTrainMonitor/*.log
 
-OpenImagesDownloadScripts/class-descriptions.csv
+OpenImagesDownloadScripts/*.csv
 OpenImagesDownloadScripts/Downloader.py
-OpenImagesDownloadScripts/oidv6-train-annotations-bbox.csv
-OpenImagesDownloadScripts/test-annotations-bbox.csv
 OpenImagesDownloadScripts/TestingImages
 OpenImagesDownloadScripts/TrainingImages
 OpenImagesDownloadScripts/TrainingImagesNegative
-OpenImagesDownloadScripts/ImageListTraining.txt
-OpenImagesDownloadScripts/ImageListTesting.txt
-OpenImagesDownloadScripts/ImageListTrainingNegative.txt
-OpenImagesDownloadScripts/TrainingAnnotations.csv
-OpenImagesDownloadScripts/TestingAnnotations.csv
-OpenImagesDownloadScripts/TrainingAnnotationsNegative.csv
+OpenImagesDownloadScripts/*.txt
 
 StockPredictor/*.csv
 StockPredictor/*.pth
